@@ -11,7 +11,7 @@
 %
 %  configuration file for SWI Prolog 5.8.0 and later versions
 %
-%  last updated: November 20, 2010
+%  last updated: December 9, 2010
 % 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -132,8 +132,10 @@ message_hook(discontiguous(_), _, _) :-		% SWI-Prolog discontiguous predicate
 '$lgt_pl_meta_predicate'(with_output_to(_, _), with_output_to(*, 0), predicate).
 '$lgt_pl_meta_predicate'(when(_, _), when(*, 0), predicate).
 % workaround problematic meta-predicate declarations:
+'$lgt_pl_meta_predicate'(consult(_), consult(*), predicate).
 '$lgt_pl_meta_predicate'(format(_, _), format(*, *), predicate).
 '$lgt_pl_meta_predicate'(format(_, _, _), format(*, *, *), predicate).
+'$lgt_pl_meta_predicate'(load_files(_, _), load_files(*, *), predicate).
 '$lgt_pl_meta_predicate'(use_module(_), use_module(*), predicate).
 '$lgt_pl_meta_predicate'(use_module(_, _), use_module(*, *), predicate).
 
